k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: execodex-fe
  labels:
    app: execodex-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: execodex-fe
  template:
    metadata:
      labels:
        app: execodex-fe
    spec:
      containers:
      - name: execodex-fe
        image: execodex-fe:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
