k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: execodex-fe
spec:
  selector:
    app: execodex-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
