k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: execodex-fe
  namespace: execodex
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "300m"
spec:
  ingressClassName: nginx
  rules:
  - host: iaka.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: execodex-fe
            port:
              number: 80
